Changed 'AD' to 'Active Directory' to be clear and consistent

--- a/src/main/resources/project/forms/CreateConfigurationForm.xml
+++ b/src/main/resources/project/forms/CreateConfigurationForm.xml
@@ -50,7 +50,7 @@
     </formElement>
     <formElement>
         <type>credential</type>
-        <label>AD Application ID/Secret:</label>
+        <label>Active Directory Application ID/Secret:</label>
         <property>credential</property>
         <required>1</required>
         <documentation>Windows Azure Active Directory Application Client ID and Secret(Password).</documentation>
