'CreateConfiguration' and 'Create VM' cleanup
o Removed obsolete attemptConnection step code. We should consider
adding validation for the parameters instead.
o Changed the configuration parameter name to 'config' for the
'CreateConfiguration' procedure to work-around DE issue.
o Moved the parameters added in the last commit from CreateConfiguration
to 'Create VM' procedure. The backing code using these parameters needs
to be implemented in the 'Create VM' procedure.
o Fixed the property reference error in 'Create VM'

--- a/src/main/resources/project/forms/DeleteConfigurationForm.xml
+++ b/src/main/resources/project/forms/DeleteConfigurationForm.xml
@@ -18,7 +18,7 @@
 <editor>
     <formElement>
         <label>Configuration:</label>
-        <property>connection_config</property>
+        <property>config</property>
         <value/>
         <documentation>The name of the configuration to delete.</documentation>
         <required>1</required>
