o Moved vm_credential into the plugin configuration. It is now part of the 'CreateConfiguration' procedure parameters.   - Updated 'Create VM' procedure account for 'vm_credential' being part of the plugin configuration. o Added getProperties in preamble.groovy to get properties within a property sheet.   - Using getProperties to get the plugin configuration values.

--- a/src/main/resources/project/forms/CreateConfigurationForm.xml
+++ b/src/main/resources/project/forms/CreateConfigurationForm.xml
@@ -59,6 +59,14 @@
         <documentation>Azure Application Client ID and Secret(Password).</documentation>
     </formElement>
     <formElement>
+        <type>credential</type>
+        <label>VM User/Password:</label>
+        <property>vm_credential</property>
+        <required>1</required>
+        <documentation>Credentials for any virtual machines provisioned using this configuration.</documentation>
+    </formElement>
+
+    <formElement>
         <type>entry</type>
         <label>Resource Pool:</label>
         <property>resource_pool</property>
