Updated desc field
This is required as part of the fix for the credential getting wiped out
on the resource template UI

--- a/src/main/resources/project/forms/CreateConfigurationForm.xml
+++ b/src/main/resources/project/forms/CreateConfigurationForm.xml
@@ -27,7 +27,7 @@
     <formElement>
         <type>entry</type>
         <label>Description:</label>
-        <property>description</property>
+        <property>desc</property>
         <value>Azure configuration.</value>
         <required>0</required>
         <documentation>A description for this configuration.</documentation>
