--- a/src/main/resources/project/forms/EditConfigurationForm.xml
+++ b/src/main/resources/project/forms/EditConfigurationForm.xml
@@ -26,7 +26,7 @@
     <formElement>
         <type>entry</type>
         <label>Description:</label>
-        <property>description</property>
+        <property>desc</property>
         <required>0</required>
         <documentation>A description for this configuration.</documentation>
     </formElement>
