--- a/src/main/resources/project/forms/EditConfigurationForm.xml
+++ b/src/main/resources/project/forms/EditConfigurationForm.xml
@@ -16,21 +16,47 @@
 
 -->
 <editor>
-    <formElement>
-        <type>credential</type>
-        <label>Login as:</label>
-        <property>credential</property>
-        <required>1</required>
-        <documentation>Windows Azure account Subscription ID/Certificate Thumbprint. This account must have enough privileges to perform API funtions.</documentation>
-    </formElement>
-    <formElement>
-        <type>entry</type>
-        <label>Description:</label>
-        <property>desc</property>
-        <required>0</required>
-        <documentation>A description for this configuration.</documentation>
-    </formElement>
-    <formElement>
+  <formElement>
+    <type>entry</type>
+    <label>Description:</label>
+    <property>desc</property>
+    <required>0</required>
+    <documentation>A description for this configuration.</documentation>
+  </formElement>
+  <formElement>
+    <type>entry</type>
+    <label>Tenant ID:</label>
+    <property>tenant_id</property>
+    <value></value>
+    <documentation>Enter the Azure Active Directory Tenant ID.</documentation>
+    <required>1</required>
+  </formElement>
+  <formElement>
+    <type>entry</type>
+    <label>Subscription ID:</label>
+    <property>subscription_id</property>
+    <value></value>
+    <documentation>Enter the Azure Active Directory Subscription ID.</documentation>
+    <required>1</required>
+  </formElement>
+  <formElement>
+    <type>credential</type>
+    <label>Client ID/Secret Key:</label>
+    <property>credential</property>
+    <required>1</required>
+    <userNameLabel>Client ID:</userNameLabel>
+    <passwordLabel>Secret Key:</passwordLabel>
+    <retypePasswordLabel>Retype Secret Key:</retypePasswordLabel>
+    <documentation>Azure Application Client ID and Secret(Password).</documentation>
+  </formElement>
+  <formElement>
+    <type>credential</type>
+    <label>VM User/Password:</label>
+    <property>vm_credential</property>
+    <required>1</required>
+    <documentation>Credentials for any virtual machines provisioned using this configuration.</documentation>
+  </formElement>
+  <formElement>
         <type>entry</type>
         <label>Resource Pool:</label>
         <property>resource_pool</property>
